improve basic functions

--- a/client/styles/components/_console.scss
+++ b/client/styles/components/_console.scss
@@ -17,7 +17,7 @@
 		text-align:left;
 	}
 
-	.preview-console__message {
+	.preview-console__message, .preview-console__expression {
 		.console__chevron {
 			left: 4px;
 			position: absolute;
@@ -128,4 +128,8 @@
 .preview-console__body {
 	display: flex;
 	flex-direction: column-reverse;
+}
+
+.preview-console__expression div {
+	margin-left: 30px;
 }
