--- a/client/styles/components/_console.scss
+++ b/client/styles/components/_console.scss
@@ -93,43 +93,43 @@
 	}
 }
 
-.preview-console__logged-times {
-	font-size: #{10 / $base-font-size}rem;
-	font-weight: bold;
-	margin: #{2 / $base-font-size}rem 0 0 #{8 / $base-font-size}rem;
-	border-radius: 10px;
-	padding: #{1 / $base-font-size}rem #{4 / $base-font-size}rem;
-	z-index: 100;
-	left: 0;
-	position: absolute;
-
-	.preview-console__message--info &, .preview-console__message--log & {
-		@include themify() {
-			background-color: getThemifyVariable('console-info-background-color');
-		}
-	}
-	.preview-console__message--warn & {
-		@include themify() {
-			background-color: getThemifyVariable('console-warn-background-color');
-		}
-	}
-	.preview-console__message--debug & {
-		@include themify() {
-			background-color: getThemifyVariable('console-debug-background-color');
-		}
-	}
-	.preview-console__message--error & {
-		@include themify() {
-			background-color: getThemifyVariable('console-error-background-color');
-		}
-	}
-}
-
 .preview-console__body {
 	display: flex;
 	flex-direction: column-reverse;
-}
 
-.preview-console__expression div {
-	margin-left: 30px;
+	.preview-console__output .preview-console__expression div {
+		margin-left: 30px;
+	}
+
+	.preview-console__output .preview-console__logged-times {
+		font-size: #{10 / $base-font-size}rem;
+		font-weight: bold;
+		margin: #{2 / $base-font-size}rem 0 0 #{8 / $base-font-size}rem;
+		border-radius: 10px;
+		padding: #{1 / $base-font-size}rem #{4 / $base-font-size}rem;
+		z-index: 100;
+		left: 0;
+		position: absolute;
+
+		.preview-console__message--info &, .preview-console__message--log & {
+			@include themify() {
+				background-color: getThemifyVariable('console-info-background-color');
+			}
+		}
+		.preview-console__message--warn & {
+			@include themify() {
+				background-color: getThemifyVariable('console-warn-background-color');
+			}
+		}
+		.preview-console__message--debug & {
+			@include themify() {
+				background-color: getThemifyVariable('console-debug-background-color');
+			}
+		}
+		.preview-console__message--error & {
+			@include themify() {
+				background-color: getThemifyVariable('console-error-background-color');
+			}
+		}
+	}
 }
