--- a/client/styles/components/_console.scss
+++ b/client/styles/components/_console.scss
@@ -140,7 +140,6 @@
 				}
 			}
 		}
-		height: 22px;
 		flex: 1 0 auto;
 		position: relative;
 	}
@@ -149,5 +148,9 @@
 		@include themify() {
 			color: getThemifyVariable('console-logged-times-color');
 		}
+	}
+
+	.preview-console__expression {
+		height: 22px;
 	}
 }
